2003-08-31  Vangelis Rokas <vrokas@otenet.gr>
	* src/pic16/main.c: corrected offsets of interrupt vectors in _pic16_genIVT()
	* src/pic16/pcode.c: fix to disable inserting BANKSEL directive
	  before instructions that use the _STATUS register

2003-08-31  Bernhard Held <bernhard@bernhardheld.de>

	* src/mcs51/gen.c (freeAsmop): fixed off by one in stack offset (AOP_STK)
	* src/mcs51/gen.c (genNearPointerSet): added missing opcode for
	fetching of the pointer
	* src/mcs51/gen.c (genNearPointerGet): added reuse of PREG,
	copied from genNearPointerSet()
	* src/mcs51/gen.c (genNearPointerGet): don't pop r0/r1, if RESULTONSTACK
	* src/mcs51/gen.c: changed order of freeAsmop(left/right/result)-calls.
	If they pop r0/r1 they must be called in the opposite order than aopOp().
	* device/lib/_mullong.c: fixed for "--model-large --int-long-reent"
	(resp. --stack-auto), prepared for --xstack

2003-08-28  Frieder Ferlemann <Frieder.Ferlemann@web.de>

	* doc/sdccman.lyx: reverted tables to those in cvs 1.64

2003-08-28  Bernhard Held <bernhard@bernhardheld.de>

	* device/lib/_startup.c: quick & dirty fix for ds390/ds400;
	these ports have their own __sdcc_external_start()

2003-08-26  Bernhard Held <bernhard@bernhardheld.de>

	pic patch provided by Slade Rich <slade_rich@yahoo.com>
	* src/pic/glue.c (pic14printPublics): fixed bug introduced when symbol
	type for bits was changed. It resulted in bit variables becoming
	global, which is not permitted in PIC 14 assembly output.

2003-08-23  Frieder Ferlemann <Frieder.Ferlemann@web.de>

	* doc/sdccman.lyx: various additions and updates. Rearranged sections

2003-08-22  Jesus Calvino-Fraga <jesusc@ece.ubc.ca>

	Z80 and MCS51 linkers complaint if a public symbol is defined
	in more than one library module:

	* as/mcs51/lklib.c
	* link/z80/lklib.c
	* as/mcs51/Makefile.in

2003-08-22  Erik Petrich <epetrich@ivorytower.norman.ok.us>

	A few small changes that speed up the peephole optimizer.

	* src/SDCCpeeph.c
